--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ comments: false
         </div>
         <div class="column one-third">
             {% include sidebar-search.html %}
+            {% include sidebar-categories-nav.html %}
         </div>
     </div>
     <div class="pagination text-align">
