--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ comments: false
 ---
 
 <section class="banner">
-    <div class="collection-head small geopattern">
+    <div class="collection-head small">
         <div class="container">
             <div class="collection-title">
               <div class="collection-header" id="sub-title"><span>{{ site.subtitle }}</span></div>
